.cabal-sandbox/logs/ghc-8.4.3/mutorere-1.0.0-2mrdlWirmVg6xjzxEPymfY.log
cabal: Entering directory '.'
Configuring mutorere-1.0.0...
Warning: The 'license-file' field refers to the file 'LICENSE' which does not
exist.
clang-5.0: warning: argument unused during compilation: '-nopie' [-Wunused-command-line-argument]
Preprocessing executable 'mutorere' for mutorere-1.0.0..
Building executable 'mutorere' for mutorere-1.0.0..
[1 of 2] Compiling GlossInterface   ( src/GlossInterface.hs, dist/dist-sandbox-72cc4717/build/mutorere/mutorere-tmp/GlossInterface.o )

src/GlossInterface.hs:15:7: error:
    • Expecting one more argument to ‘SignalGen (Signal Picture)’
      Expected a type, but ‘SignalGen (Signal Picture)’ has kind ‘* -> *’
    • In the type signature:
        playElerea :: Display
                      -> Color
                         -> Int
                            -> (Signal (Maybe Float)
                                -> Signal (Maybe InputEvent) -> SignalGen (Signal Picture))
                               -> IO ()
   |
15 |    -> SignalGen (Signal Picture))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^
cabal: Leaving directory '.'
